--- a/src/app.css
+++ b/src/app.css
@@ -10,8 +10,10 @@
 @media (max-width: 480px) {
 
   .content-container {
-    height: calc(100vh - 6rem);
+    min-height: calc(100vh - 6rem);
     top: 6rem;
+    display: flex;
+    flex-direction: column;
   }
 
   /* ---------- Header ---------- */
@@ -161,6 +163,7 @@
     font-style: italic;
     font-size: min(10rem, max(3vw, 3rem));
     margin: 0.5rem 5vw 0.5rem 5vw;
+    line-height: 3.5rem;
   }
 
   .home-date-container {
@@ -185,5 +188,23 @@
     font-style: italic;
     font-size: min(3rem, max(4vw, 2rem));
     margin: 0;
+  }
+
+  .home-pools {
+    background-image: url('/src/assets/home-image-48.jpg');
+    background-size: cover;
+    background-position: center;
+  }
+
+  .home-landscaping {
+    background-image: url('/src/assets/home-image-48.jpg');
+    background-size: cover;
+    background-position: center;
+  }
+
+  .home-excavation {
+    background-image: url('/src/assets/home-image-48.jpg');
+    background-size: cover;
+    background-position: center;
   }
 }
