--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
 body {
   margin: 0;
+  background-color: var(--skella-white);
 }
 
 body::-webkit-scrollbar-thumb {
@@ -32,6 +33,9 @@ html {
   min-width: 100vw;
 }
 
+a {
+  text-decoration: none;
+}
 
 /*
 
@@ -51,5 +55,19 @@ Large (laptops/desktops)
 
 Extra large (big desktops, ultrawide)
 @media (min-width: 1441px) { ... }
+
+
+
+
+orr
+
+
+.section { ... }
+
+@media (min-width: 601px) { ... }
+
+@media (min-width: 1201px) { ... }
+
+@media (min-width: 1921px) { ... }
 
 */
