--- a/src/app.css
+++ b/src/app.css
@@ -1047,6 +1047,113 @@
     }
   }
 
+/* ------ Blog ------ */
+.blog-post-container {
+  width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: max(1rem, min(1vw, 2rem));
+  background-color: var(--skella-light-blue);
+}
+
+.blog-post-item-container {
+  width: min(50rem, 90vw);
+  display: flex;
+  justify-content: center;
+  align-items: space-evenly;
+  background-color: var(--skella-dark-blue);
+}
+
+.blog-post {
+  width: min(50rem, 90vw);
+  min-height: 55rem;
+  margin: 3rem auto;
+  background-color: var(--skella-white);
+  border-radius: 0.2rem;
+  overflow: hidden;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  border: 1px solid var(--skella-dark-blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.blog-info-sub-container {
+  display: flex;
+  min-height: 55rem;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.blog-post-image {
+  width: 100%;
+  height: 35rem;
+  object-fit: cover;
+}
+
+.blog-post-header {
+  margin: 1rem 0;
+}
+
+.blog-post-title {
+  font-size: 2.7rem;
+  font-weight: bold;
+  margin: 0.5rem 4rem;
+  color: var(--skella-dark-blue);
+}
+
+.blog-post-description {
+  font-size: 1.7rem;
+  color: var(--skella-dark-blue);
+  margin: 1rem 4rem 0 4rem;
+}
+
+/* Story Section */
+.blog-post-story {
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+  margin: 1rem 2rem 0 2rem;
+  font-size: 1.5rem;
+}
+
+.blog-post-story > p {
+  line-height: 1.4;
+  text-align: left;
+}
+
+.blog-post-story.collapsed {
+  max-height: 0;
+  opacity: 0;
+  transition: max-height 0.3s ease, opacity 0.2s ease;
+}
+
+.blog-post-story.expanded {
+  max-height: 100rem;
+  opacity: 1;
+}
+
+.blog-post-toggle {
+  margin: 2rem 0;
+  padding: 0.5rem 1.5rem;
+  background-color: #007acc;
+  color: white;
+  border: none;
+  border-radius: 1px;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  transition: background-color 0.3s ease;
+}
+
+.blog-post-toggle:hover {
+  background-color: var(--skella-dark-blue);
+}
+
+
 
 @media (min-width: 601px) {
   .home-title-container {
