--- a/src/app.css
+++ b/src/app.css
@@ -1153,6 +1153,55 @@
   background-color: var(--skella-dark-blue);
 }
 
+/* ------- Quote ------- */
+.soumission-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Container Styles */
+.form-container {
+  width: calc(100% - 4rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto 0 auto;
+  padding: 2rem;
+  background-color: var(--skella-white);
+  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
+  font-family: 'Roboto', sans-serif;
+}
+
+.soumission-title {
+  font-size: max(3rem, min(2.5vw, 4rem));
+  color: #333;
+  text-align: center;
+  margin: 1rem 0 4rem 0;
+  font-weight: bold;
+}
+
+.finance-it-div {
+  background-color: var(--skella-white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: max(3rem, min(4vw, 7rem));
+  font-family: 'Roboto', sans-serif;
+}
+
+.finance-it-h {
+  font-size: max(3rem, min(3.5vw, 5rem));
+  color: #333;
+}
+
+.finance-it-a {
+  background-color: var(--skella-white);
+  display: block;
+  width: min(96%, 30rem);
+}
+
 
 
 @media (min-width: 601px) {
